# a-paxos-net-library

./: BUILDING.md  CMakeLists.txt  Dockerfile  NOTICE  README.md  build.sh  scaffold.yaml
examples/basic/: CMakeLists.txt
examples/basic/src/: main.c
include/a-paxos-net-library/: paxos_net.h
src/: p2p_network.c  paxos_net_internal.h  paxos_net_server.c  sync_manager.c
tests/: CMakeLists.txt
tests/src/: test_paxos_net.c
